--- a/app/globals.css
+++ b/app/globals.css
@@ -15,6 +15,6 @@ html {
 
 body {
   font-family: var(--font-primary), Arial, Helvetica, sans-serif;
-  background: #202020;
+  background: #161A1E;
   color: white;
 }
