--- a/components/layout/Preloader/style.module.scss
+++ b/components/layout/Preloader/style.module.scss
@@ -8,24 +8,10 @@
   z-index: 99;
   background-color: #161a1e;
 
-  svg {
-    position: absolute;
-    top: 0;
-    width: 100%;
-    height: calc(100% + 300px);
-    path {
-      fill: #161a1e;
-    }
-  }
-
-  p {
-    display: flex;
-    color: #161a1e;
-    font-size: clamp(52px, 7vw, 152px);
-    background:#FAF0E6; 
-    padding: 20px 40px;
-    align-items: center;
+  img {
     position: absolute;
     z-index: 1;
+    width: clamp(240px, 30vw, 500px);
+    height: auto;
   }
 }
